--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body background="img/fondo.jpg">
     <div class="container">
       <div class="subcontainer1">
-        <img class="img1" src="img/epa2.jpeg" alt="Foto" width="70%" />
+        <img class="img1" src="img/epa.jpeg" alt="Foto" />
         <hr class="separador" />
         <div class="datos">
           <div class="Edatos">
@@ -21,16 +21,16 @@
             <p><b> •Apellidos:</b>Mendoza Torres</p>
             <p><b> •N° de Contacto:</b>3005035096</p>
             <p>
-              <b> •Perfil:</b>Soy una persona a la que le gusta aprender cosas
-              nuevas,tengo Habilidad y disposición para realizar labores con
-              objetivos específicos, facilidad para interactuar con otras
-              personas,tengo buen desempeño en trabajar en equipo y excelente
-              capacidad para aprender procesos.
-            </p>
-            <br />
-          </div>
-          <br />
-          <div class="links">
+              <b> •Perfil:</b>Soy una persona a la que le gusta aprender cosa s
+              nuevas,tengo Habilidad y disposición para realizar labores con  
+              objetivos específicos, facilidad para interactuar con otras 
+              personas,tengo buen desempeño en trabajar en equipo y excelente 
+              capacidad para aprender procesos. 
+            </p>  
+            <br />  
+          </div>  
+          <br />  
+          <div class="links"> 
             <div class="img">
               <a
                 href="https://www.linkedin.com/in/laura-vanessa-mendoza-torres-0a34452ba/" target="_blank"
@@ -49,6 +49,7 @@
               </a>
             </div>
           </div>
+          <br>
         </div>
       </div>
       <div class="subcontainer2">
@@ -119,7 +120,7 @@
             Desarrollador Backend<br />
             <b> •Skills:</b>
           </p>
-          <div class="links2">
+          <div>
             <div class="img">
               <a href="https://www.python.org/" target="_blank">
                 <img class="imgf" src="img/p2.png" alt="Foto" />
