--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="shortcut icon" href="img/gatito2.png">
+    <link rel="shortcut icon" href="img/gatito2.png" />
   </head>
   <body background="img/fondo.jpg">
     <div class="container">
@@ -22,18 +22,19 @@
             <p><b> •N° de Contacto:</b>3005035096</p>
             <p>
               <b> •Perfil:</b>Soy una persona a la que le gusta aprender cosa s
-              nuevas,tengo Habilidad y disposición para realizar labores con  
-              objetivos específicos, facilidad para interactuar con otras 
-              personas,tengo buen desempeño en trabajar en equipo y excelente 
-              capacidad para aprender procesos. 
-            </p>  
-            <br />  
-          </div>  
-          <br />  
-          <div class="links"> 
+              nuevas,tengo Habilidad y disposición para realizar labores con
+              objetivos específicos, facilidad para interactuar con otras
+              personas,tengo buen desempeño en trabajar en equipo y excelente
+              capacidad para aprender procesos.
+            </p>
+            <br />
+          </div>
+          <br />
+          <div class="links">
             <div class="img">
               <a
-                href="https://www.linkedin.com/in/laura-vanessa-mendoza-torres-0a34452ba/" target="_blank"
+                href="https://www.linkedin.com/in/laura-vanessa-mendoza-torres-0a34452ba/"
+                target="_blank"
               >
                 <img class="imgf" src="img/a.svg" alt="Foto" />
               </a>
@@ -49,7 +50,7 @@
               </a>
             </div>
           </div>
-          <br>
+          <br />
         </div>
       </div>
       <div class="subcontainer2">
