--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="shortcut icon" href="img/gatito2.png" />
+    <link rel="shortcut icon" href="img/gatito2.png" />git config --global core.editorgit config --global core.editor
   </head>
   <body background="img/fondo.jpg">
     <div class="container">
